--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "css-build": "node-sass --omit-source-map-url src/styles.scss css/styles.css",
-    "css-watch": "npm run css-build",
-    "start": "ng serve css-watch"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
