--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,12 @@
             "styles": [
               "node_modules/bulma/css/bulma.min.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/animate.css/animate.min.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bulma-toast/dist/bulma-toast.min.js"
+            ]
           },
           "configurations": {
             "production": {
