--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/router": "~8.0.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "bulma": "^0.7.5",
+    "bulma-toast": "^1.5.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
