--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "~8.0.0",
     "@angular/forms": "~8.0.0",
     "@angular/material": "^8.0.1",
+    "@angular/material-moment-adapter": "^8.0.1",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
@@ -28,6 +29,7 @@
     "bootstrap": "^4.3.1",
     "bulma": "^0.7.5",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
