--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.0.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "bulma": "^0.7.5",
     "bulma-toast": "^1.5.1",
