--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@angular/router": "~8.0.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "animate.css": "^3.7.2",
     "angular-webstorage-service": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.3.1",
     "bulma": "^0.7.5",
+    "bulma-toast": "^1.5.1",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "rxjs": "^6.4.0",
